@@ -60,11 +60,12 @@ namespace eval xdnd {
 # ----------------------------------------------------------------------------
 #  Command xdnd::HandleXdndEnter
 # ----------------------------------------------------------------------------
-proc xdnd::HandleXdndEnter { path drag_source typelist } {
+proc xdnd::HandleXdndEnter { path drag_source typelist { data {} } } {
   variable _pressedkeys
   variable _actionlist
   set _pressedkeys 1
   set _actionlist  { copy move link ask private }
+  ::tkdnd::generic::SetDroppedData $data
   ::tkdnd::generic::HandleEnter $path $drag_source $typelist $typelist \
            $_actionlist $_pressedkeys
 };# xdnd::HandleXdndEnter
